# auto_driving_contest

./: README.md
camera_info_publisher/: CMakeLists.txt  package.xml
camera_info_publisher/include/: camera_info_publisher.hpp
camera_info_publisher/launch/: camera_info_publisher.launch
camera_info_publisher/src/: camera_info_publisher.cpp
device_driver/erp42_driver/: CMakeLists.txt  package.xml
device_driver/erp42_driver/cfg/: lowlevel_controller.yaml
device_driver/erp42_driver/launch/: erp42_main.launch
device_driver/erp42_driver/src/: erp42_main.cpp
device_driver/erp42_msgs/: CMakeLists.txt  package.xml
device_driver/erp42_msgs/msg/: erp42_to_pc.msg  pc_to_erp42.msg
device_driver/imu_vn100_yu/: CMakeLists.txt  package.xml
device_driver/imu_vn100_yu/include/imu_vn100_yu/: imu_driver.h
device_driver/imu_vn100_yu/launch/: imu_launch.launch
device_driver/imu_vn100_yu/src/: imu_driver_core.cpp  imu_driver_node.cpp
device_driver/mysen_imu_driver/: CMakeLists.txt  package.xml
device_driver/mysen_imu_driver/include/mysen_imu_driver/: driver_core.h
device_driver/mysen_imu_driver/launch/: mysen_imu.launch
device_driver/mysen_imu_driver/src/: driver_core.cpp  driver_node.cpp
final_waypoint_follower/: CMakeLists.txt  package.xml
final_waypoint_follower/include/: final_waypoint_follower.hpp
final_waypoint_follower/launch/: final_waypoint_follower.launch  waypoint_integration.launch
final_waypoint_follower/src/: final_waypoint_follower.cpp
integration_launch/: CMakeLists.txt  package.xml
integration_launch/launch/: erp42_planning_detection_quadtree.launch  sensor_localization.launch
lidar_quadtree_cluster/: CMakeLists.txt  README.md  package.xml
lidar_quadtree_cluster/include/quadtree_segmentation/: quadtree.hpp  quadtree_segmentation.hpp  quadtree_segmentation_node.hpp
lidar_quadtree_cluster/include/track_driving/: map2velodyne.hpp  track_driving.hpp
lidar_quadtree_cluster/launch/: map2velodyne.launch  quadtree_segmentation.launch  quadtree_segmentation_trackdriving.launch  total.launch  track_driving.launch
lidar_quadtree_cluster/nodes/quadtree_segmentation/: quadtree.cpp  quadtree_segmentation.cpp  quadtree_segmentation_node.cpp
lidar_quadtree_cluster/nodes/track_driving/: map2velodyne.cpp  track_driving.cpp
localizer/odom_imu_merger/: CMakeLists.txt  package.xml
localizer/odom_imu_merger/launch/: odom_imu_merger.launch
localizer/odom_imu_merger/src/: odom_imu_merger.cpp
mission_handler/mission_handler_2021/: CMakeLists.txt  package.xml
mission_handler/mission_handler_2021/cfg/: mission_params_kcity_2021_first.yaml  mission_params_kcity_2021_last.yaml  mission_params_kcity_2021_second copy.yaml  mission_params_kcity_2021_second.yaml  mission_params_lightpark.yaml  mission_params_parkinglot.yaml  mission_params_soongsil.yaml  mission_params_soongsil_all.yaml  mission_params_soongsil_delivery.yaml  mission_params_soongsil_delivery_full.yaml  mission_params_soongsil_inside.yaml  mission_params_soongsil_main.yaml  mission_params_soongsil_parking.yaml  sm.yaml
mission_handler/mission_handler_2021/include/mission_handler_2021/: IsPointInPolygon.h  Mission.h  Mission_2020.h  traffic_light_rule.h
mission_handler/mission_handler_2021/launch/: mission_manager_kcity_2021_first.launch  mission_manager_kcity_2021_last.launch  mission_manager_kcity_2021_second.launch  mission_manager_parkinglot.launch  mission_manager_soongsil.launch  mission_manager_soongsil_delivery.launch  mission_manager_soongsil_delivery_full.launch  mission_manager_soongsil_inside.launch  mission_manager_soongsil_lightpark.launch  mission_manager_soongsil_main.launch  mission_manager_soongsil_parking.launch
mission_handler/mission_handler_2021/src/: IsPointInPolygon.cpp  MissionManager.cpp
mission_handler/traffic_area_msgs/: CMakeLists.txt  package.xml
mission_handler/traffic_area_msgs/msg/: traffic_area.msg
mission_handler/traffic_light_msgs/: CMakeLists.txt  package.xml
mission_handler/traffic_light_msgs/msg/: Light.msg
parking_mission/: CMakeLists.txt  package.xml
parking_mission/include/: parking_mission.hpp
parking_mission/launch/: parking_mission.launch
parking_mission/src/: parking_mission.cpp
planner/goal_initial/: CMakeLists.txt  package.xml
planner/goal_initial/launch/: goal_initial.launch
planner/goal_initial/src/: goal_initial copy.cpp.back  goal_initial.cpp  goal_initial.cpp.back  goal_initial.cpp.back2  goal_initial.cpp.old.back
planner/vehicle_status_sender/: CMakeLists.txt  package.xml
planner/vehicle_status_sender/src/: vehicle_status_sender.cpp
pointgrey_camera_driver/pointgrey_camera_driver/cfg/: erp42_camera.yaml  erp42_camera_ex.yaml
range_vision_fusion/: CMakeLists.txt  package.xml
range_vision_fusion/include/range_vision_fusion/: range_vision_fusion.h
range_vision_fusion/launch/: range_vision_fusion.launch
range_vision_fusion/src/: range_vision_fusion.cpp
road_remover/: CMakeLists.txt  package.xml
road_remover/include/: road_remover.hpp
road_remover/launch/: road_remover.launch
road_remover/src/: road_remover.cpp
