<?xml version="1.0"?>
<package format="2">
  <name>final_waypoint_follower</name>
  <version>0.0.0</version>
  <description>The final_waypoint_follower package</description>
  <maintainer email="leejaemin@todo.todo">leejaemin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>autoware_build_flags</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <!--Start-->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <!--End-->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>jsk_recognition_utils</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>jsk_topic_tools</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <!--Start-->
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <!--End-->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>jsk_recognition_utils</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <!--Start-->
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend> 
  <!--End-->

  <depend>op_ros_helpers</depend>
  <depend>vector_map_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
