<?xml version="1.0"?>
<package format="2">
  <name>road_remover</name>
  <version>0.0.0</version>
  <description>The road_remover package</description>
  <maintainer email="leejaemin@naver.com">leejaemin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend> 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
